--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -76,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Core\Config.cs" />
     <Compile Include="Core\DPSEngine.cs" />
     <Compile Include="Core\TeraPlayer.cs" />
     <Compile Include="Mod.cs" />
