--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -85,7 +85,11 @@
     </Page>
     <Compile Include="Core\Config.cs" />
     <Compile Include="Core\DPSEngine.cs" />
+    <Compile Include="Core\Repository\onPacketArival2904.cs" />
+    <Compile Include="Core\Repository.cs" />
+    <Compile Include="Core\Repository\PritableData.cs" />
     <Compile Include="Core\TeraPlayer.cs" />
+    <Compile Include="Core\Vector3Str.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="Themes\MainWindowStyle.xaml.cs">
       <DependentUpon>MainWindowStyle.xaml</DependentUpon>
