--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -89,6 +89,7 @@
     </Page>
     <Compile Include="Core\Config.cs" />
     <Compile Include="Core\DamageElement.cs" />
+    <Compile Include="Core\DuplicateKeyComparer.cs" />
     <Compile Include="Core\IDpsEngine.cs" />
     <Compile Include="Core\MetrEngine.cs" />
     <Compile Include="Core\TableWriter.cs" />
