Добавил сортировку по таргету, агрометр так и не работает, сделал более умный поиск бам, хил теперь не вызывает агро, если долго не хилит

--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -105,6 +105,7 @@
     </Page>
     <Compile Include="Core\Agro\AgroElement.cs" />
     <Compile Include="Core\Agro\AgroEngine.cs" />
+    <Compile Include="Core\Agro\AgroKeyValue.cs" />
     <Compile Include="Core\ComboBoxHiddenItem.cs" />
     <Compile Include="Core\Config.cs" />
     <Compile Include="Core\DamageElement.cs" />
