Меняем ссылку на определённый api

--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -52,7 +52,7 @@
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="TeraApi">
-      <HintPath>..\..\TeraModLoader\TeraApi\bin\Debug\TeraApi.dll</HintPath>
+      <HintPath>..\TeraApi.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
