Добавил mod.info

--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -59,6 +59,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="mod.info">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Windows\App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -199,7 +202,11 @@
     <EmbeddedResource Include="assets\player_class_images\sorcerer.png" />
     <EmbeddedResource Include="assets\player_class_images\warrior.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
