Новые настройки, убрал агро

--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -78,10 +78,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UserElements\AgroUserControl.xaml">
+    <None Include="UserElements\AgroUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
+    </None>
     <Page Include="UserElements\DamageTakenUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
