--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -82,21 +82,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </None>
-    <Page Include="UserElements\DamageTakenUserControl.xaml">
+    <Page Include="UserElements\DamageEngineUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UserElements\HealTakenUserControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UserElements\HealUserControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UserElements\DamageUserControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserElements\PlayerBarElement.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -125,17 +113,8 @@
     <None Include="UserElements\AgroUserControl.xaml.cs">
       <DependentUpon>AgroUserControl.xaml</DependentUpon>
     </None>
-    <Compile Include="UserElements\DamageTakenUserControl.xaml.cs">
-      <DependentUpon>DamageTakenUserControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserElements\HealTakenUserControl.xaml.cs">
-      <DependentUpon>HealTakenUserControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserElements\HealUserControl.xaml.cs">
-      <DependentUpon>HealUserControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UserElements\DamageUserControl.xaml.cs">
-      <DependentUpon>DamageUserControl.xaml</DependentUpon>
+    <Compile Include="UserElements\DamageEngineUserControl.xaml.cs">
+      <DependentUpon>DamageEngineUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserElements\PlayerBarElement.xaml.cs">
       <DependentUpon>PlayerBarElement.xaml</DependentUpon>
