--- a/Terometr/Terometr.csproj
+++ b/Terometr/Terometr.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Core\Damage\DamageElement.cs" />
     <Compile Include="Core\Damage\DamageEngine.cs" />
     <Compile Include="Core\Damage\DamageKeyValue.cs" />
+    <Compile Include="Core\Damage\DamagePlayerType.cs" />
     <Compile Include="Core\DuplicateKeyComparer.cs" />
     <Compile Include="Core\IDpsUIEngine.cs" />
     <Compile Include="Core\MetrEngine.cs" />
